- Prevent airdrops from violating the trespassing restriction

* RELEASE 23 PREVIEW 1
- Include AMB editor
- Adjustable rebase range as multiple of operational range, setting named rebase_range_multiplier
- Option not to draw capital cities larger than they really are, named do_not_make_capital_cities_appear_larger
- Fix city screen zooming out for adjacent tiles that aren't actually workable due to maximum work radius

* RELEASE 22
- Can adjust the size of the area cities can work
  - Setting named city_work_radius, standard radius is 2, can be set 1 - 7
  - work_area_limit option allows the workable areas to be limited based on cities' cultural levels
- Option do_not_unassign_workers_from_polluted_tiles (off by default)
- Fix AI players sometimes spawning nonsensical units when hitting a unit limit
- Pressing the Z key on the city screen toggles the zoom level of the map display

* RELEASE 21
- Allow perfume amounts to be specified as percentages
- Option to limit how many units can share each tile, named limit_units_per_tile
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that
- Option to allow sale of buildings like aqueducts that uncap population growth, named allow_sale_of_aqueducts_and_hospitals
- Option stopping non-sea detector units from revealing invisible sea units and vice-versa, named no_cross_shore_detection
- Do not apply all-units special retreat rule to immobile units
- Group foreign units on the right-click menu based only on their surface characteristics
- Fix charm flag controlling PTW arty targeting not working for reloaded games
- Fix building unit prereqs interfering with unit limits
- Fix double despawn of barb unit entering city after hit by lethal ZoC
- Fix incorrect ETAs shown for one tile paths when railroad movement is limited

* RELEASE 20