@@ -242,6 +242,10 @@ ai_worker_requirement_percent = 150
 ; instead flood plains disease stops once players discover Writing. This happens because that flag is encoded as number 8 and, instead of checking if
 ; players have a tech with that flag, the code mistakenly checks if players have tech #8, which is Writing under the standard rules. Correcting this
 ; bug causes a lot more disease, which is a major annoyance, and so this bug fix is turned off by default.
+;   DIVISION BY ZERO IN AI ALLIANCE EVAL -- When considering whether to agree to a military alliance, the AI computes the distance from its capital to
+; the nearest city belonging to the target of the alliance and divides by that distance. For unknown reasons, in rare cases that distance may be zero,
+; which crashes the program due to division by zero. The mod fixes this issue by inserting a bit of logic after the distance is computed to check if
+; it's zero and, if so, set it to one.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -253,6 +257,7 @@ patch_phantom_resource_bug = true
 patch_maintenance_persisting_for_obsolete_buildings = true
 patch_barbarian_diagonal_bug = true
 patch_disease_stopping_tech_flag_bug = false
+patch_division_by_zero_in_ai_alliance_eval = true
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
